# mcp-studio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRASHPROOFING_IMPLEMENTATION.md  DEMO_PREPROMPTS.md  DOCKER.md  DOCKER_TEST.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  INSTALL.md  MANIFEST.in  MCP_STUDIO_IMPROVEMENTS_2025-12-02.md  MCP_STUDIO_SOTA_COMPLIANCE_2025-12-02.md  PREPROMPT_QUICKSTART.md  README.md  REPO_DETAIL_COLLECTOR_2025-12-02.md  REPO_STATUS.md  RUNT_ANALYZER_REFACTOR_2025-12-02.md  SCAN_PERSISTENCE_2025-12-02.md  SOTA_ANALYZER_TOOL_ADDED_2025-12-02.md  STATUS_ASSESSMENT.md  WATCHFILES_README.md  docker-compose.yml  docker-diagnose.ps1  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  mcp-studio-watchfiles.service  mcp_config_parser.py  mcpb.json  mkdocs.yml  openapi.json  preprompt_db.py  (+19 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci-cd.yml  ci-cd.yml  ci.yml  ci.yml.20260701_030123.bak  docs.yml  frontend-ci-cd.yml  sync-wiki.yml
assets/prompts/: system.md
backend/: api_server.py  main.py  mcp_server.py  simple_api.py
backend/api/: __init__.py  development.py  ecosystem.py  settings_routes.py  tools.py
backend/app/api/: __init__.py  ecosystem.py  health.py  web.py
backend/app/core/: config.py  exceptions.py  logging_utils.py  websocket.py
backend/app/services/: config_service.py  discovery_service.py  mcp_client_metadata.py  mcp_client_zoo.py  repo_scanner_service.py  scaffold_service.py
backend/static/js/: clients.js  dashboard.js  repos.js  tabs.js  tools.js
backend/templates/clients/: list.html
backend/tools/: decorators.py  registry.py  runt_analyzer.py  server_scaffold.py  server_updater.py  utility.py
docs/: ARCHITECTURE.md  CI_CD_SETUP.md  CLIENT_SERVER_ACTIVATION.md  CLIENT_SERVER_ACTIVATION_IMPLEMENTATION.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DXT_BUILDING_GUIDE.md  FULLSTACK_BUILDER_ANALYSIS.md  FULLSTACK_BUILDER_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  MCPB_DXT_SUPPORT.md  MCP_CLIENT_ZOO.md  MCP_SERVER_GUIDE.md  MCP_SERVER_LIFECYCLE_MANAGEMENT.md  MCP_SERVER_TOOLS_IMPROVEMENTS.md  MCP_STUDIO_DASHBOARD.md  MCP_ZOO_RUNT_ANALYZER.md  PRD.md  PREPROMPT_ROADMAP.md  PREPROMPT_SYSTEM.md  PROJECT_OVERVIEW.md  TESTING_PLAN.md  UI_IMPROVEMENT_PLAN.md  WINDSURF_CONTINUATION.md  WINDSURF_REALITY_CHECK_UPDATE.md  index.md  repository-analysis-2025-10-26.md  roadmap.md
docs/api/: reference.md
docs/community/: discussions.md
docs/development/: CURSOR_UPDATE_QUALITY_CONCERNS.md  IDE_TRANSPARENCY_STANDARDS.md  README.md  contributing.md  environment.md  testing-guide.md
docs/examples/: quickstart.md
docs/glama-platform/: GLAMA_INTEGRATION.md
docs/mcp-technical/: MCP_PRODUCTION_CHECKLIST.md
dxt-frontend/: README.md  manifest.json  package_dxt.ps1  validate_package.ps1
dxt-frontend/prompts/: system.md  user.md
frontend/: cypress.config.ts  dashboard.html  package-lock.json  package.json
frontend/cypress/fixtures/: executions.json  user.json
frontend/cypress/support/: commands.ts  e2e.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useEcosystem.ts  useTools.ts
frontend/src/pages/: Dashboard.tsx  ServerDetails.tsx
frontend/src/services/: api.ts  server.service.ts  tool-execution.service.ts  websocket.service.ts
frontend/src/types/: index.ts
frontend/src/utils/: classNames.ts
junk/frontend_dontuse/: index.html  package-lock.json  package.json
junk/frontend_dontuse/src/: App.jsx  index.css
junk/obsolete/mcp-studio-docker/: docker-compose.yml  docker-verify-mount.ps1
mcp-studio-docker/: DOCKER.md  Dockerfile  docker-compose.yml  docker-diagnose.ps1  docker-start.ps1
mcp-studio-react/: package-lock.json  package.json
mcp-studio-react/src/: App.tsx
mcp_studio/: __init__.py  main.py
mcp_studio/api/: __init__.py  auth.py  data.py  files.py  group_routes.py  server.py  smoke_test_routes.py
mcp_studio/core/: analysis.py  discovery.py
mcp_studio/templates/: base.html  dashboard.html
mcp_studio/tools/: data.py  development.py  discovery.py  files.py  landing_page_builder.py  runt_analyzer_rules.py  server_scaffold.py
mcpb/: README.md  manifest.json  pyproject.toml
mcpb/src/: main.py  preprompt_db.py  preprompts.db
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: basic_test.py  build-mcpb-package.ps1  check_clients.py  cleanup_dashboard_logic.py  cua-nsis-config.json  deploy_vortex.ps1  extract_template.py  fix-standards.ps1  install-watchfiles.ps1  minimal_server.py  refactor_dashboard.py  release.py  reproduce_scan.py  run-with-watchfiles.ps1  run_dev.py  runt_api.py  studio_dashboard.py  test-docker.ps1  test_clients.py  test_cline_settings.py  test_docstring.py  test_docstring2.py  test_docstring3.py  test_server.py  test_settings_manager.py  test_watchfiles_runner.py  verify_api.py  watchfiles_runner.py
src/api/: working_sets.py
src/mcp_studio/: __init__.py  main.py  mcp_server.py
src/working_sets/: __init__.py  client_manager.py  manager.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: entertainment.json  robotics.json
tests/: README.md  run_api_tests.py  run_working_sets_tests.py  simple_test.py  test_crud_tools.py  test_fastmcp.py  test_imports.py  test_setup.py  test_studio_dashboard.py  test_summary.md  test_working_sets.py
tests/web_app/: __init__.py  conftest.py  test_api_clients.py  test_api_discovery.py  test_api_health.py  test_api_mcp_servers.py  test_api_metrics.py  test_api_repos.py  test_api_servers.py  test_api_tools.py  test_api_tools_extended.py  test_api_working_sets.py  test_models.py  test_services.py  test_web_routes.py
tools/landing_page_builder/: test_landing_page.py
tools/working_sets_switcher/: manager.py
(+266 files in other folders)
