[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-studio"
version = "0.1.0"
description = "MCP Studio - A comprehensive UI for managing MCP servers"
authors = [{ name = "Sandra Schipal", email = "sandraschipal@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp[all]>=2.13.1",
    "mcp>=1.0.0,<2.0.0",  # CRITICAL: Prevent MCP 1.16.0+ Python 3.13 incompatibility
    "anyio>=4.0.0,<5.0.0",  # CRITICAL: Prevent incompatible anyio versions
    "structlog>=23.0.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_studio*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "EM", "ISC", "ICN", "PT", "Q", "RET", "SIM", "TID", "ARG", "PLE", "PLW"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v --cov=mcp_studio --cov-report=term-missing"

[tool.pyright]
include = ["src", "studio_dashboard.py"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
