[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-studio"
version = "0.2.1-beta"
description = "MCP Studio - Management tool for MCP servers (beta): Web dashboard (FastAPI) + MCP server (FastMCP 3.1+)"
authors = [{ name = "Sandra Schipal", email = "sandraschipal@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp[all]>=3.1.0,<4",
    "mcp>=1.0.0,<2.0.0",  # CRITICAL: Prevent MCP 1.16.0+ Python 3.13 incompatibility
    "anyio>=4.0.0,<5.0.0",  # CRITICAL: Prevent incompatible anyio versions
    "structlog>=23.0.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
    "prometheus-client>=0.19.0",
    "watchfiles>=0.21.0",  # For crashproofing and file monitoring
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v --cov=mcp_studio --cov-report=term-missing"
# Separate test markers for MCP server vs web app tests
markers = [
    "mcp_server: Tests for MCP server component (tools, FastMCP)",
    "web_app: Tests for web app component (FastAPI, routes, services)",
    "integration: Integration tests",
    "unit: Unit tests",
]

[tool.pyright]
include = ["src", "studio_dashboard.py"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Hardened v13.1 Rule Set
select = [
    "E", "F", "I", "UP", "B", "S", "A", "ANN", "COM", "C4", "DTZ", "PIE", "T20", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "COM812", # Trailing comma missing (handled by formatter)
    "ISC001", # Single line implicit string concatenation (handled by formatter)
    "PLR0913", # Too many arguments
    "S101",   # Use of assert (standard for pytest)
    "TRY003", # Avoid specifying long messages in exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
